delivery invoice update

--- a/src/app/components/sales/delivery-invoice/print-delivery-invoice/print-delivery-invoice.component.html
+++ b/src/app/components/sales/delivery-invoice/print-delivery-invoice/print-delivery-invoice.component.html
@@ -267,10 +267,7 @@
   <section class="sign">
     <div class="prepared-by w-5">
       <div class="sign-area"></div>
-      <div class="text-center font-weight-bold">
-        E & <br />
-        OE
-      </div>
+      <div class="text-center font-weight-bold">E & OE</div>
     </div>
     <div class="prepared-by w-20">
       <div class="sign-area"></div>
