--- a/src/app/components/sales/print-delivery-receipt/print-delivery-receipt.component.html
+++ b/src/app/components/sales/print-delivery-receipt/print-delivery-receipt.component.html
@@ -103,6 +103,7 @@
         <th>Shade</th>
         <th>Blend</th>
         <th>Lot</th>
+        <th class="text-right">HSN Code</th>
         <th class="text-right">Order Qty</th>
         <th class="text-right">Delivered Qty</th>
         <th class="text-right">Previous Delivered Qty</th>
@@ -121,6 +122,7 @@
             <td>{{ yarn.shadeName }}</td>
             <td>{{ yarn.blendName }}</td>
             <td>{{ yarn.lot }}</td>
+            <td class="text-right">{{ yarn.hsnCode }}</td>
             <td class="text-right">{{ yarn.orderQuantity }}</td>
             <td class="text-right">{{ yarn.deliveredQuantity }}</td>
             <td class="text-right">{{ yarn.previousDeliveredQuantity }}</td>
