disabled go to search button

--- a/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
@@ -234,9 +234,9 @@
   </div>
 
   <div class="footer">
-    <button mat-raised-button (click)="goToSearch()">
+    <!-- <button mat-raised-button (click)="goToSearch()">
       <mat-icon>arrow_back</mat-icon>Go to Search
-    </button>
+    </button> -->
     <div>
       <button mat-raised-button class="mr-16" (click)="resetData()">
         <mat-icon>refresh</mat-icon>Reset
