--- a/src/app/components/production/production-master/production-master.component.html
+++ b/src/app/components/production/production-master/production-master.component.html
@@ -9,5 +9,8 @@
     <mat-tab label="Yarn Counts">
       <app-yarn-counts></app-yarn-counts>
     </mat-tab>
+    <mat-tab label="Waste">
+      <app-waste></app-waste>
+    </mat-tab>
   </mat-tab-group>
 </section>
