--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,5 +15,7 @@
   </mat-sidenav-container>
 </section>
 <app-print-fibre-po></app-print-fibre-po>
+<app-print-fibre-stock></app-print-fibre-stock>
 <app-print-delivery-invoice></app-print-delivery-invoice>
 <app-print-delivery-receipt></app-print-delivery-receipt>
+<app-print-recovery-details></app-print-recovery-details>
