--- a/src/app/components/production/yarn-recovery/yarn-recovery.component.html
+++ b/src/app/components/production/yarn-recovery/yarn-recovery.component.html
@@ -11,63 +11,73 @@
     <div *ngIf="loader" class="loader">
       <mat-spinner></mat-spinner>
     </div>
-    <table mat-table [dataSource]="dataSource" matSort>
+    <table mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="programNo">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Program No</th>
+        <th mat-header-cell *matHeaderCellDef>Program No</th>
         <td mat-cell *matCellDef="let row">{{ row.programNo }}</td>
       </ng-container>
 
       <ng-container matColumnDef="programDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Program Date</th>
+        <th mat-header-cell *matHeaderCellDef>Program Date</th>
         <td mat-cell *matCellDef="let row">{{ row.programDate }}</td>
       </ng-container>
 
       <ng-container matColumnDef="shadeName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Shade</th>
+        <th mat-header-cell *matHeaderCellDef>Shade</th>
         <td mat-cell *matCellDef="let row">{{ row.shadeName }}</td>
       </ng-container>
 
       <ng-container matColumnDef="blendName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Blend</th>
+        <th mat-header-cell *matHeaderCellDef>Blend</th>
         <td mat-cell *matCellDef="let row">{{ row.blendName }}</td>
       </ng-container>
 
       <ng-container matColumnDef="plannedQty">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th mat-header-cell *matHeaderCellDef class="text-right">
           Planned Qty(kg)
         </th>
-        <td mat-cell *matCellDef="let row">{{ row.plannedQty }}</td>
+        <td mat-cell *matCellDef="let row" class="text-right">
+          {{ row.plannedQty }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="mixedQuantity">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th mat-header-cell *matHeaderCellDef class="text-right">
           Fibre Mixed(kg)
         </th>
-        <td mat-cell *matCellDef="let row">{{ row.mixedQuantity }}</td>
+        <td mat-cell *matCellDef="let row" class="text-right">
+          {{ row.mixedQuantity }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="yarnLot">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Lot(s)</th>
+        <th mat-header-cell *matHeaderCellDef>Lot(s)</th>
         <td mat-cell *matCellDef="let row">{{ row.yarnLot }}</td>
       </ng-container>
 
       <ng-container matColumnDef="productionQty">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th mat-header-cell *matHeaderCellDef class="text-right">
           Yarn Production(kg)
         </th>
-        <td mat-cell *matCellDef="let row">{{ row.productionQty }}</td>
+        <td mat-cell *matCellDef="let row" class="text-right">
+          {{ row.productionQty }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="wasteQuantity">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Waste Qty(kg)</th>
-        <td mat-cell *matCellDef="let row">{{ row.wasteQuantity }}</td>
+        <th mat-header-cell *matHeaderCellDef class="text-right">
+          Waste Qty(kg)
+        </th>
+        <td mat-cell *matCellDef="let row" class="text-right">
+          {{ row.wasteQuantity }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="yarnRecoveryPercent">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th mat-header-cell *matHeaderCellDef class="text-right">
           Yarn Recovery %
         </th>
-        <td mat-cell *matCellDef="let row">
+        <td mat-cell *matCellDef="let row" class="text-right">
           {{ row.yarnRecoveryPercent || 0 | number : "1.2-2" }}%
         </td>
       </ng-container>
