--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,9 @@ body {
 
 // print
 
-app-print-fibre-po {
+app-print-fibre-po,
+app-print-fibre-stock,
+app-print-recovery-details {
   display: none;
 }
 
@@ -23,7 +25,9 @@ app-print-delivery-invoice {
 }
 
 @media print {
-  app-print-fibre-po {
+  app-print-fibre-po,
+  app-print-fibre-stock,
+  app-print-recovery-details {
     display: block;
   }
 
@@ -141,6 +145,10 @@ app-print-delivery-invoice {
   padding-bottom: 2px;
 }
 
+.pb-4 {
+  padding-bottom: 4px;
+}
+
 .pb-16 {
   padding-bottom: 16px;
 }
@@ -215,6 +223,10 @@ app-print-delivery-invoice {
   margin-top: 24px;
 }
 
+.mt-32 {
+  margin-top: 32px;
+}
+
 .mb-4 {
   margin-bottom: 4px;
 }
@@ -237,6 +249,10 @@ app-print-delivery-invoice {
 
 .mr-16 {
   margin-right: 16px;
+}
+
+.mr-24 {
+  margin-right: 24px;
 }
 
 // font weight
