Added dialog expand option to recovery details

--- a/src/app/components/sales/deliveries/delivery-details/delivery-details.component.html
+++ b/src/app/components/sales/deliveries/delivery-details/delivery-details.component.html
@@ -11,7 +11,7 @@
     </button>
   </div>
 
-  <button mat-icon-button (click)="close()">
+  <button mat-icon-button matTooltip="close" (click)="close()">
     <mat-icon>close</mat-icon>
   </button>
 </div>
