--- a/src/app/components/sales/search-sales-order/order-details/order-details.component.html
+++ b/src/app/components/sales/search-sales-order/order-details/order-details.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <h1 mat-dialog-title>Order Details</h1>
-  <button mat-icon-button (click)="close()">
+  <button mat-icon-button matTooltip="close" (click)="close()">
     <mat-icon>close</mat-icon>
   </button>
 </div>
