--- a/src/app/components/production/yarn-recovery/recovery-details/recovery-details.component.html
+++ b/src/app/components/production/yarn-recovery/recovery-details/recovery-details.component.html
@@ -11,9 +11,20 @@
       <mat-icon>print</mat-icon>
     </button>
   </div>
-  <button mat-icon-button (click)="close()">
-    <mat-icon>close</mat-icon>
-  </button>
+  <div>
+    <button
+      *ngIf="!loader"
+      mat-icon-button
+      matTooltip="{{ expanded ? 'collapse' : 'expand' }}"
+      (click)="expand()"
+    >
+      <mat-icon *ngIf="!expanded">fullscreen</mat-icon>
+      <mat-icon *ngIf="expanded">fullscreen_exit</mat-icon>
+    </button>
+    <button mat-icon-button matTooltip="close" (click)="close()">
+      <mat-icon>close</mat-icon>
+    </button>
+  </div>
 </div>
 <div mat-dialog-content class="container">
   <div *ngIf="loader" class="spinner">
@@ -113,7 +124,9 @@
       </ng-container>
 
       <ng-container matColumnDef="issueQty">
-        <th mat-header-cell *matHeaderCellDef class="text-right">Issue Qty</th>
+        <th mat-header-cell *matHeaderCellDef class="text-right">
+          Issue Qty (kg)
+        </th>
         <td mat-cell *matCellDef="let element" class="text-right">
           {{ element.issuedQuantity }}
         </td>
@@ -157,7 +170,7 @@
 
       <ng-container matColumnDef="programQty">
         <th mat-header-cell *matHeaderCellDef class="text-right">
-          Program Qty
+          Program Qty (kg)
         </th>
         <td mat-cell *matCellDef="let element" class="text-right">
           {{ element.programQuantity }}
@@ -166,7 +179,7 @@
 
       <ng-container matColumnDef="producedQty">
         <th mat-header-cell *matHeaderCellDef class="text-right">
-          Produced Qty
+          Produced Qty (kg)
         </th>
         <td mat-cell *matCellDef="let element" class="text-right">
           {{ element.productionQuantity }}
@@ -196,7 +209,9 @@
       </ng-container>
 
       <ng-container matColumnDef="wasteQty">
-        <th mat-header-cell *matHeaderCellDef class="text-right">Waste Qty</th>
+        <th mat-header-cell *matHeaderCellDef class="text-right">
+          Waste Qty (kg)
+        </th>
         <td mat-cell *matCellDef="let element" class="text-right">
           {{ element.wasteQuantity }}
         </td>
