--- a/src/app/components/success-dialog/success-dialog.component.html
+++ b/src/app/components/success-dialog/success-dialog.component.html
@@ -1,6 +1,11 @@
 <section class="banner">
   <div class="banner-header green">
-    <button mat-icon-button class="close-button" (click)="close()">
+    <button
+      mat-icon-button
+      matTooltip="close"
+      class="close-button"
+      (click)="close()"
+    >
       <mat-icon>close</mat-icon>
     </button>
     <div class="success-img"></div>
