Added party name in fibre stock table

--- a/src/app/components/purchases/fibre/fibre-stock/fibre-stock.component.html
+++ b/src/app/components/purchases/fibre/fibre-stock/fibre-stock.component.html
@@ -92,6 +92,13 @@
           </td>
         </ng-container>
 
+        <ng-container matColumnDef="party">
+          <th mat-header-cell *matHeaderCellDef>Party</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.partyName }}
+          </td>
+        </ng-container>
+
         <ng-container matColumnDef="fibreType">
           <th mat-header-cell *matHeaderCellDef>Fibre Type</th>
           <td mat-cell *matCellDef="let element">
