--- a/src/app/components/purchases/fibre/fibre-stock/print-fibre-stock/print-fibre-stock.component.html
+++ b/src/app/components/purchases/fibre/fibre-stock/print-fibre-stock/print-fibre-stock.component.html
@@ -9,6 +9,7 @@
     <thead>
       <th>S.No.</th>
       <th>Received DC No</th>
+      <th>Party</th>
       <th>Fibre Type</th>
       <th>Fibre Shade</th>
       <th>Lot</th>
@@ -25,6 +26,7 @@
         <tr>
           <td>{{ i + 1 }}</td>
           <td>{{ stock.receivedDCNo }}</td>
+          <td>{{ stock.partyName }}</td>
           <td>{{ stock.fibreType }}</td>
           <td>{{ stock.shadeName }}</td>
           <td>{{ stock.lot }}</td>
