--- a/src/app/components/purchases/fibre/fibre-stock/fibre-stock.component.html
+++ b/src/app/components/purchases/fibre/fibre-stock/fibre-stock.component.html
@@ -61,10 +61,20 @@
   </section>
   <section class="stocks-btn" *ngIf="dataSource.data.length">
     <div>
-      <mat-checkbox (change)="stockAboveZero($event)"
-        >Stocks above 0 only</mat-checkbox
-      >
-      <div *ngIf="dataSource.data.length" class="text-right mt-8 ml-8 mb-4">
+      <div>
+        <mat-checkbox
+          [formControl]="stockAbove0Checkbox"
+          (change)="filterStocks()"
+          >Stocks above 0 only</mat-checkbox
+        >
+        <mat-checkbox
+          [formControl]="conversionOrderCheckbox"
+          class="ml-24"
+          (change)="filterStocks()"
+          >Conversion orders only</mat-checkbox
+        >
+      </div>
+      <div *ngIf="dataSource.data.length" class="mt-8 ml-8 mb-4">
         &ast;Click the row to see the details
       </div>
     </div>
@@ -89,6 +99,13 @@
           <th mat-header-cell *matHeaderCellDef>ReceivedDC No</th>
           <td mat-cell *matCellDef="let element">
             {{ element.receivedDCNo }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="poNo">
+          <th mat-header-cell *matHeaderCellDef>PONo</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.poNo || "_" }}
           </td>
         </ng-container>
 
