--- a/src/app/components/purchases/fibre/fibre-receive-conversion-order/fibre-receive-conversion-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-conversion-order/fibre-receive-conversion-order.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <h1 class="header letter-spacing-1">Fibre New Conversion Order</h1>
+  <h1 class="header letter-spacing-1">Receive Fibre Conversion Order</h1>
   <mat-card class="party-card">
     <mat-card-header>
       <mat-card-title>CO Details</mat-card-title>
