Added conversion only label in print for fibreStock

--- a/src/app/components/purchases/fibre/fibre-stock/print-fibre-stock/print-fibre-stock.component.html
+++ b/src/app/components/purchases/fibre/fibre-stock/print-fibre-stock/print-fibre-stock.component.html
@@ -5,6 +5,9 @@
       {{ printService.fibreStockAsOnDate | date : "dd/MM/yyyy" }}
     </h1>
   </section>
+  <div *ngIf="printService.fibreStockConversionOnly">
+    *Conversion stock only
+  </div>
   <table>
     <thead>
       <th>S.No.</th>
