--- a/src/app/components/party/party-list/party-list.component.scss
+++ b/src/app/components/party/party-list/party-list.component.scss
@@ -41,3 +41,11 @@ mat-expansion-panel-header {
   display: flex;
   justify-content: center;
 }
+
+.flex {
+  display: flex;
+}
+
+.line-height {
+  line-height: 1.5;
+}
