--- a/src/app/components/sales/receive-yarn-return/receive-yarn-return.component.html
+++ b/src/app/components/sales/receive-yarn-return/receive-yarn-return.component.html
@@ -12,7 +12,7 @@
     <mat-card-content>
       <form class="form" [formGroup]="form">
         <div class="form-container">
-          <div class="w-20 ml-16">
+          <div class="max-w-33 min-w-20 ml-16">
             <label class="font-weight-bold">Party</label>
             <div class="font-size-16 text-gray pt-4">
               <span *ngIf="dataSource.length">{{
