--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,8 +49,16 @@ app-print-delivery-invoice {
   min-width: 15%;
 }
 
+.min-w-20 {
+  min-width: 20%;
+}
+
 .min-w-25 {
   min-width: 25%;
+}
+
+.max-w-33 {
+  max-width: 33.33%;
 }
 
 .max-w-50 {
