--- a/src/app/components/party/party-list/party-list.component.html
+++ b/src/app/components/party/party-list/party-list.component.html
@@ -20,10 +20,10 @@
     >
       <mat-expansion-panel-header>
         <mat-panel-title>
-          <span class="font-size-16 font-weight-normal"
-            ><span class="mr-16">{{ index + 1 }},</span
-            >{{ party.partyName }}</span
-          >
+          <span class="font-size-16 font-weight-normal flex">
+            <span class="mr-16">{{ index + 1 }},</span>
+            <div class="line-height">{{ party.partyName }}</div>
+          </span>
         </mat-panel-title>
         <mat-panel-description>{{ party.cityName }}</mat-panel-description>
       </mat-expansion-panel-header>
