Added productionWasteDtsId to fibreStock

--- a/src/app/components/production/mixing/mixing.component.html
+++ b/src/app/components/production/mixing/mixing.component.html
@@ -97,7 +97,7 @@
       </button>
       <mat-card>
         <div
-          *ngIf="mixingDetails.length && mixedBlend"
+          *ngIf="mixingDetails?.length && mixedBlend"
           class="font-weight-bold px-16 py-10"
         >
           <span class="text-gray font-size-14 mr-8">Mixed Blend</span>-<span
