--- a/src/app/components/production/production-master/yarn-counts/add-yarn-counts/add-yarn-counts.component.html
+++ b/src/app/components/production/production-master/yarn-counts/add-yarn-counts/add-yarn-counts.component.html
@@ -1,7 +1,7 @@
 <h1 mat-dialog-title>Add Yarn Counts</h1>
 <div mat-dialog-content class="form">
   <mat-form-field appearance="fill">
-    <mat-label>Shade</mat-label>
+    <mat-label>Counts</mat-label>
     <input matInput [formControl]="counts" />
     <mat-error>This field is required.</mat-error>
   </mat-form-field>
