--- a/src/app/components/production/yarn-recovery/yarn-recovery.component.html
+++ b/src/app/components/production/yarn-recovery/yarn-recovery.component.html
@@ -52,7 +52,7 @@
 
       <ng-container matColumnDef="yarnLot">
         <th mat-header-cell *matHeaderCellDef>Lot(s)</th>
-        <td mat-cell *matCellDef="let row">{{ row.yarnLot }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.yarnLot || "_" }}</td>
       </ng-container>
 
       <ng-container matColumnDef="productionQty">
