service methods restructure

--- a/src/app/components/purchases/fibre/fibre-stock/fibre-stock.component.html
+++ b/src/app/components/purchases/fibre/fibre-stock/fibre-stock.component.html
@@ -59,7 +59,7 @@
       </button>
     </div>
   </section>
-  <section class="stocks-btn" *ngIf="dataSource.data.length">
+  <section class="stocks-btn" *ngIf="showFilterCheckbox">
     <div>
       <div>
         <mat-checkbox
