Added waste sales screens

--- a/src/app/components/sales/deliveries/deliveries.component.html
+++ b/src/app/components/sales/deliveries/deliveries.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <h1 class="header letter-spacing-1">Search Deliveries</h1>
+  <h1 class="header letter-spacing-1">Search Yarn Deliveries</h1>
   <section class="search-content">
     <section class="checkbox">
       <mat-checkbox (change)="onChange($event)"
