party list style fix

--- a/src/app/components/party/party-list/party-list.component.html
+++ b/src/app/components/party/party-list/party-list.component.html
@@ -20,9 +20,9 @@
     >
       <mat-expansion-panel-header>
         <mat-panel-title>
-          <span class="font-size-16 font-weight-normal flex">
+          <span class="font-size-16 font-weight-normal flex line-height">
             <span class="mr-16">{{ index + 1 }},</span>
-            <div class="line-height">{{ party.partyName }}</div>
+            <div>{{ party.partyName }}</div>
           </span>
         </mat-panel-title>
         <mat-panel-description>{{ party.cityName }}</mat-panel-description>
