Added style changes

--- a/src/app/components/party/party-list/party-list.component.html
+++ b/src/app/components/party/party-list/party-list.component.html
@@ -44,19 +44,19 @@
             <div id="gstNo" class="text-gray">{{ party.gstNo || "_" }}</div>
           </div>
           <div>
-            <label for="address1">Address 1</label>
+            <label for="address1">Address Line 1</label>
             <div id="address1" class="text-gray">
               {{ party.address1 || "_" }}
             </div>
           </div>
           <div>
-            <label for="address2">Address 2</label>
+            <label for="address2">Address Line 2</label>
             <div id="address2" class="text-gray">
               {{ party.address2 || "_" }}
             </div>
           </div>
           <div>
-            <label for="address3">Address 3</label>
+            <label for="address3">Address Line 3</label>
             <div id="address3" class="text-gray">
               {{ party.address3 || "_" }}
             </div>
