--- a/src/app/components/waste-management/create-waste-stock/create-waste-stock.component.scss
+++ b/src/app/components/waste-management/create-waste-stock/create-waste-stock.component.scss
@@ -20,6 +20,10 @@ h1 {
   position: relative;
 }
 
+.mat-mdc-table-sticky {
+  border-top: 1px solid #e0e0e0;
+}
+
 .mat-mdc-header-row {
   background: rgb(225, 225, 225);
 }
