--- a/src/app/components/waste-management/create-waste-stock/create-waste-stock.component.html
+++ b/src/app/components/waste-management/create-waste-stock/create-waste-stock.component.html
@@ -12,6 +12,7 @@
         <td mat-cell *matCellDef="let element; let index = index">
           {{ index + 1 }}
         </td>
+        <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
       <ng-container matColumnDef="wasteCategoryName">
@@ -19,12 +20,16 @@
         <td mat-cell *matCellDef="let element">
           {{ element.wasteCategoryName }}
         </td>
+        <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
 
       <ng-container matColumnDef="quantity">
         <th mat-header-cell *matHeaderCellDef>Quantity(Kg)</th>
         <td mat-cell *matCellDef="let element">
           {{ element.quantity | number : "1.0-3" }}
+        </td>
+        <td mat-footer-cell *matFooterCellDef>
+          {{ getTotalQuantity() | number : "1.0-3" }}
         </td>
       </ng-container>
 
@@ -60,6 +65,11 @@
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr
+        [hidden]="!dataSource.length"
+        mat-footer-row
+        *matFooterRowDef="displayedColumns; sticky: true"
+      ></tr>
       <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell no-rows" [attr.colspan]="displayedColumns.length">
           No rows to display
