--- a/src/app/components/sales/waste-order-delivery/waste-order-delivery.component.html
+++ b/src/app/components/sales/waste-order-delivery/waste-order-delivery.component.html
@@ -1,8 +1,8 @@
 <section class="container">
-  <h1 class="header letter-spacing-1">Create Waste Sales Order</h1>
+  <h1 class="header letter-spacing-1">Waste Sales Order Delivery</h1>
   <mat-card class="party-card">
     <mat-card-header>
-      <mat-card-title>Waste Sales Details</mat-card-title>
+      <mat-card-title>Delivery Details</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form class="form" [formGroup]="form">
@@ -56,14 +56,14 @@
       (click)="addData()"
       class="button"
     >
-      <mat-icon>playlist_add</mat-icon> Select Waste Stock
+      <mat-icon>playlist_add</mat-icon> Waste Stock
     </button>
   </div>
 
   <div class="mat-elevation-z8 w-40">
     <table mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="wasteCategoryName">
-        <th mat-header-cell *matHeaderCellDef>Waste</th>
+        <th mat-header-cell *matHeaderCellDef>Waste Category</th>
         <td mat-cell *matCellDef="let element">
           {{ element.wasteCategoryName }}
         </td>
